--- a/src/pages/projects/packages.astro
+++ b/src/pages/projects/packages.astro
@@ -1,4 +1,5 @@
 ---
+/* eslint-disable max-lines */
 import { getEntry } from 'astro:content';
 import ProjectHero from '../../components/ProjectHero.astro';
 import ProjectLayout from '../../layouts/ProjectLayout.astro';
@@ -6,11 +7,45 @@ import ColsLeft from '../../components/rows/ColsLeft.astro';
 import CustomImage from '../../components/CustomImage.astro';
 import ColsRight from '../../components/rows/ColsRight.astro';
 import AboutLine from '../../components/AboutLine.astro';
+import { SchemaBuilder } from '../../services/schema_builder';
 
 const project = await getEntry('projects', 'packages');
+
+// Create SEO schema for Packages project
+const packagesSchema = SchemaBuilder.createProjectSchema({
+  name: 'Open Source Packages & Libraries by Steve Ferguson',
+  description: 'Open source package development including npm packages, reusable components, and developer tools for the JavaScript and PHP ecosystems.',
+  programmingLanguage: ['JavaScript', 'TypeScript', 'PHP', 'Node.js'],
+  tools: [
+    'npm',
+    'Composer',
+    'Node.js',
+    'TypeScript',
+    'Package Management',
+    'Open Source',
+    'GitHub'
+  ],
+  keywords: [
+    'Open Source',
+    'npm Packages',
+    'Package Development',
+    'JavaScript Libraries',
+    'PHP Packages',
+    'Developer Tools',
+    'Reusable Components'
+  ],
+  dateCreated: '2020'
+});
 ---
 
-<ProjectLayout>
+<ProjectLayout
+  title="Open Source Packages & Libraries by Steve Ferguson - npm & PHP Package Development"
+  description="Steve Ferguson's open source contributions: npm packages, PHP libraries, reusable components, and developer tools for the JavaScript and PHP communities."
+  keywords="steve ferguson packages, open source developer, npm packages, php packages, javascript libraries, package development, developer tools, github"
+  image="/assets/projects/Packages.png"
+  type="article"
+  schema={packagesSchema}
+>
   <ProjectHero
     title={project.data.title}
     year={project.data.year}
